// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ElementArea snapshots should not render ElementArea 1`] = `<DocumentFragment />`;

exports[`ElementArea snapshots should render ElementArea 1`] = `
<DocumentFragment>
  <div
    class="css-q0izro ElementArea ElementArea--light"
    data-test-box=""
  >
    <small
      class="css-1ssji0j ElementArea__label ElementArea__label--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
      data-test-text=""
      style="text-align: inherit;"
    >
      Frame
    </small>
    <svg
      class="ElementArea__area ElementArea__area--light"
    >
      <path
        d="M 0,0 H 100 V 100 H 0 V 0"
      />
    </svg>
    <svg
      class="Corners Corners--light Corners--increase-zindex Corners--increase-zindex--light"
      style="height: 100px; left: 0px; top: 0px; width: 100px;"
    >
      <rect
        height="6"
        rx="1.5"
        width="6"
        x="-3"
        y="-3"
      />
      <rect
        height="6"
        rx="1.5"
        width="6"
        x="-3"
        y="97"
      />
      <rect
        height="6"
        rx="1.5"
        width="6"
        x="97"
        y="-3"
      />
      <rect
        height="6"
        rx="1.5"
        width="6"
        x="97"
        y="97"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`ElementArea snapshots should render with label when x2 i y2 is less than rest cords 1`] = `
<DocumentFragment>
  <div
    class="css-q0izro ElementArea ElementArea--light"
    data-test-box=""
  >
    <small
      class="css-8d3d4i ElementArea__label ElementArea__label--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
      data-test-text=""
      style="text-align: inherit;"
    >
      Frame
    </small>
    <svg
      class="ElementArea__area ElementArea__area--light"
    >
      <path
        d="M 0,0 H -100 V -100 H 0 V 0"
      />
    </svg>
    <svg
      class="Corners Corners--light Corners--increase-zindex Corners--increase-zindex--light"
      style="height: -100px; left: 0px; top: 0px; width: -100px;"
    >
      <rect
        height="6"
        rx="1.5"
        width="6"
        x="-3"
        y="-3"
      />
      <rect
        height="6"
        rx="1.5"
        width="6"
        x="-3"
        y="-103"
      />
      <rect
        height="6"
        rx="1.5"
        width="6"
        x="-103"
        y="-3"
      />
      <rect
        height="6"
        rx="1.5"
        width="6"
        x="-103"
        y="-103"
      />
    </svg>
  </div>
</DocumentFragment>
`;
